fix: display three dots when the text too long.

--- a/src/components/option/Option.module.scss
+++ b/src/components/option/Option.module.scss
@@ -25,6 +25,12 @@
     text-transform: uppercase;
   }
 
+  &__content {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &--is-correct {
     background-color: #60bf88;
     border: 2px solid #60bf88;
